tests/bad/default_arg.glaz
fn x(_k: bool = true, _a: i32) {
}

fn main() {
}
